// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Front Page A11y I can see the skip to content link 1`] = `"إذهب الى المحتوى"`;

exports[`AMP Front Page AMP Consent config 1`] = `
Object {
  "consents": Object {
    "user-consent": Object {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": Object {
    "default": Object {
      "timeout": Object {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": Object {
        "user-consent": Array [],
      },
    },
  },
}
`;

exports[`AMP Front Page AMP Geo config 1`] = `
Object {
  "ISOCountryGroups": Object {
    "eea": Array [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": Array [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Front Page Analytics ATI 1`] = `
Object {
  "requests": Object {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=5&p=arabic.page&r=%24%7BscreenWidth%7Dx%24%7BscreenHeight%7Dx%24%7BscreenColorDepth%7D&re=%24%7BavailableScreenWidth%7Dx%24%7BavailableScreenHeight%7D&hl=%24%7Btimestamp%7D&lng=%24%7BbrowserLanguage%7D&x1=[urn%3Abbc%3Acps%3A3f0c7dec-d826-8578-e050-380a4e807810]&x2=[amp]&x3=[news-arabic]&x4=[ar]&x5=[%24%7BsourceUrl%7D]&x6=[%24%7BdocumentReferrer%7D]&x7=[index-home]&x8=[simorgh]&x9=[%D8%A7%D9%84%D8%B1%D8%A6%D9%8A%D8%B3%D9%8A%D8%A9%2B-%2BBBC%2BNews%2B%D8%B9%D8%B1%D8%A8%D9%8A]&x11=[1970-01-18T02%3A13%3A01.429Z]&x12=[1970-01-19T02%3A08%3A48.876Z]&ref=%24%7BdocumentReferrer%7D",
  },
  "transport": Object {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": Object {
    "trackPageview": Object {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Front Page Analytics chartbeat 1`] = `
Object {
  "vars": Object {
    "contentType": "Index",
    "domain": "test.bbc.co.uk",
    "sections": "Arabic, Arabic - IDX",
    "title": "الرئيسية - BBC News عربي",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Front Page Analytics comscore 1`] = `
Object {
  "extraUrlParams": Object {
    "comscorekw": "amp",
  },
  "vars": Object {
    "c2": "17986528",
  },
}
`;

exports[`AMP Front Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/arabic"`;

exports[`AMP Front Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 بي بي سي. بي بي سي ليست مسؤولة عن محتوى المواقع الخارجية. سياستنا بخصوص الروابط الخارجية."`;

exports[`AMP Front Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, عربي",
  "url": "/arabic",
}
`;

exports[`AMP Front Page Footer Link should match text and url 2`] = `
Object {
  "text": "لماذا يمكنك الاعتماد على أخبار بي بي سي",
  "url": "https://www.bbc.com/arabic/institutional-49283069",
}
`;

exports[`AMP Front Page Footer Link should match text and url 3`] = `
Object {
  "text": "شروط الاستخدام",
  "url": "https://www.bbc.com/arabic/institutional-37731351",
}
`;

exports[`AMP Front Page Footer Link should match text and url 4`] = `
Object {
  "text": "عن بي بي سي",
  "url": "https://www.bbc.com/arabic/institutional-37731352",
}
`;

exports[`AMP Front Page Footer Link should match text and url 5`] = `
Object {
  "text": "سياسة الخصوصية",
  "url": "https://www.bbc.com/arabic/institutional-37731353",
}
`;

exports[`AMP Front Page Footer Link should match text and url 6`] = `
Object {
  "text": "ملفات الارتباط Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Front Page Footer Link should match text and url 7`] = `
Object {
  "text": "اتصل بـ بي بي سي",
  "url": "https://www.bbc.com/arabic/institutional-37731355",
}
`;

exports[`AMP Front Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`AMP Front Page Footer Link should match text and url 9`] = `
Object {
  "text": "سياستنا بخصوص الروابط الخارجية.",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`AMP Front Page Header I can see the branding 1`] = `"BBC News, عربي"`;

exports[`AMP Front Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "الصفحة الحالية, رئيسية",
  "url": "/arabic",
}
`;

exports[`AMP Front Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "شرق أوسط",
  "url": "/arabic/middleeast",
}
`;

exports[`AMP Front Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "عالم",
  "url": "/arabic/world",
}
`;

exports[`AMP Front Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "علوم وتكنولوجيا",
  "url": "/arabic/scienceandtech",
}
`;

exports[`AMP Front Page Header Navigation link should match text and url 5`] = `
Object {
  "text": "صحة",
  "url": "/arabic/topics/c4794229-7f87-43ce-ac0a-6cfcd6d3cef2",
}
`;

exports[`AMP Front Page Header Navigation link should match text and url 6`] = `
Object {
  "text": "فيديو",
  "url": "/arabic/media",
}
`;

exports[`AMP Front Page Header Navigation link should match text and url 7`] = `
Object {
  "text": "صحافة",
  "url": "/arabic/inthepress",
}
`;

exports[`AMP Front Page Header Navigation link should match text and url 8`] = `
Object {
  "text": "ترند",
  "url": "/arabic/trending",
}
`;

exports[`AMP Front Page Header Navigation link should match text and url 9`] = `
Object {
  "text": "تحقيقات",
  "url": "/arabic/tv-and-radio-42414864",
}
`;

exports[`AMP Front Page Header Navigation link should match text and url 10`] = `
Object {
  "text": "برامجنا",
  "url": "/arabic/tv-and-radio-37728883",
}
`;

exports[`AMP Front Page Index Alsos should match visually hidden text 1`] = `"المزيد حول هذه القصة"`;

exports[`AMP Front Page Main heading should match text 1`] = `"BBC News, عربي - الرئيسية"`;

exports[`AMP Front Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/arabic/images/icons/icon-192x192.png",
}
`;

exports[`AMP Front Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/arabic/images/icons/icon-72x72.png",
}
`;

exports[`AMP Front Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/arabic/images/icons/icon-96x96.png",
}
`;

exports[`AMP Front Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/arabic/images/icons/icon-128x128.png",
}
`;

exports[`AMP Front Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/arabic/images/icons/icon-144x144.png",
}
`;

exports[`AMP Front Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/arabic/images/icons/icon-152x152.png",
}
`;

exports[`AMP Front Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/arabic/images/icons/icon-180x180.png",
}
`;

exports[`AMP Front Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/arabic/images/icons/icon-192x192.png",
}
`;

exports[`AMP Front Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/arabic/images/icons/icon-384x384.png",
}
`;

exports[`AMP Front Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/arabic/images/icons/icon-512x512.png",
}
`;

exports[`AMP Front Page SEO Canonical link 1`] = `"http://localhost:7080/arabic"`;

exports[`AMP Front Page SEO Dir attribute 1`] = `"rtl"`;

exports[`AMP Front Page SEO FB admins 1`] = `"100004154058350"`;

exports[`AMP Front Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Front Page SEO Heading level 1 1`] = `"BBC News, عربي - الرئيسية"`;

exports[`AMP Front Page SEO Lang attribute 1`] = `"ar"`;

exports[`AMP Front Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "WebPage",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/arabic",
        "@type": "WebPage",
        "name": "الرئيسية",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
          "width": 1024,
        },
        "name": "BBC News عربي",
        "publishingPrinciples": "https://www.bbc.com/arabic/institutional-49283069",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
      "url": "http://localhost:7080/arabic",
    },
  ],
}
`;

exports[`AMP Front Page SEO OG description 1`] = `"بي بي سي العربية هي شبكة لنقل الأخبار والمعلومات ومقاطع الفيديو إلى العالم عبر عدة وسائط، تشمل الإنترنت ومواقع التواصل الاجتماعي والراديو والتلفزيون والهواتف المحمولة."`;

exports[`AMP Front Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png"`;

exports[`AMP Front Page SEO OG image alt 1`] = `"BBC News عربي"`;

exports[`AMP Front Page SEO OG locale 1`] = `"ar"`;

exports[`AMP Front Page SEO OG site name 1`] = `"BBC News عربي"`;

exports[`AMP Front Page SEO OG title 1`] = `"الرئيسية - BBC News عربي"`;

exports[`AMP Front Page SEO OG type 1`] = `"website"`;

exports[`AMP Front Page SEO OG url 1`] = `"http://localhost:7080/arabic"`;

exports[`AMP Front Page SEO Page title 1`] = `"الرئيسية - BBC News عربي"`;

exports[`AMP Front Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`AMP Front Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Front Page SEO Twitter creator 1`] = `"@BBCArabic"`;

exports[`AMP Front Page SEO Twitter description 1`] = `"بي بي سي العربية هي شبكة لنقل الأخبار والمعلومات ومقاطع الفيديو إلى العالم عبر عدة وسائط، تشمل الإنترنت ومواقع التواصل الاجتماعي والراديو والتلفزيون والهواتف المحمولة."`;

exports[`AMP Front Page SEO Twitter image alt 1`] = `"BBC News عربي"`;

exports[`AMP Front Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png"`;

exports[`AMP Front Page SEO Twitter site 1`] = `"@BBCArabic"`;

exports[`AMP Front Page SEO Twitter title 1`] = `"الرئيسية - BBC News عربي"`;

exports[`AMP Front Page SEO apple-itunes-app meta tag should match text 1`] = `"app-id=558497376, app-argument=http://localhost:7080/arabic?utm_medium=banner&utm_content=apple-itunes-app"`;

exports[`AMP Front Page Sections should match headline text 1`] = `"الخبر الرئيسي"`;

exports[`AMP Front Page Sections should match headline text 2`] = `"فيديوالمزيد"`;

exports[`AMP Front Page Sections should match headline text 3`] = `"تقارير خاصةالمزيد"`;

exports[`AMP Front Page Sections should match headline text 4`] = `"مرأةالمزيد"`;

exports[`AMP Front Page Sections should match headline text 5`] = `"صحةالمزيد"`;

exports[`AMP Front Page Sections should match headline text 6`] = `"اقتصادالمزيد"`;

exports[`AMP Front Page Sections should match headline text 7`] = `"علوم وتكنولوجياالمزيد"`;

exports[`AMP Front Page Sections should match headline text 8`] = `"ثقافة وفنونالمزيد"`;

exports[`AMP Front Page Sections should match headline text 9`] = `"رياضةالمزيد"`;

exports[`AMP Front Page Sections should match headline text 10`] = `"برامجناالمزيد"`;

exports[`AMP Front Page Sections should match headline text 11`] = `"عرض الصحف"`;

exports[`AMP Front Page Sections should match headline text 12`] = `"مجلةالمزيد"`;

exports[`AMP Front Page Sections should match headline text 13`] = `"شارك برأيك:المزيد"`;

exports[`AMP Front Page Sections should match headline text 14`] = `"بي بي سي ترندالمزيد"`;

exports[`AMP Front Page Sections should match headline text 15`] = `"بالصورالمزيد"`;

exports[`AMP Front Page Sections should match headline text 16`] = `"مباشر"`;

exports[`AMP Front Page Sections should match headline text 17`] = `"اخترنا لكم"`;

exports[`AMP Front Page Sections should match headline text 18`] = `"بطولة كأس العالم 2018المزيد"`;

exports[`AMP Front Page Sections should match headline text 19`] = `"روابط لبي بي سي"`;

exports[`AMP Front Page Useful Links should match text and url 1`] = `"وظائف شاغرة في بي بي سي عربي - /arabic/front_page"`;

exports[`AMP Front Page Useful Links should match text and url 2`] = `"أكاديمية بي بي سي: اكتشف... تعلم.. .تطور - /arabic/front_page"`;

exports[`AMP Front Page Useful Links should match text and url 3`] = `"ثمانون عاما على بي بي سي عربي: من - /arabic/front_page"`;

exports[`AMP Front Page Useful Links should match text and url 4`] = `"مدونة المرأة: علامات - /arabic/front_page"`;

exports[`AMP Front Page Useful Links should match text and url 5`] = `"شركاؤنا - /arabic/front_page"`;

exports[`Story Promo Headline should match text 1`] = `"المجلس العسكري في السودان يعلن إحباط \\"محاولة انقلابية\\""`;

exports[`Story Promo Image should match image 1`] = `
<amp-img
  alt="متظاهرون يحتفلون بالتوصل لاتفاق بين المجلس العسكري والمتظاهرين"
  attribution="Reuters"
  height="549"
  layout="responsive"
  src="https://ichef.bbci.co.uk/news/660/cpsprodpb/17FC4/production/_107844289_055122086-1.jpg"
  srcset="https://ichef.bbci.co.uk/news/70/cpsprodpb/17FC4/production/_107844289_055122086-1.jpg 70w, https://ichef.bbci.co.uk/news/95/cpsprodpb/17FC4/production/_107844289_055122086-1.jpg 95w, https://ichef.bbci.co.uk/news/144/cpsprodpb/17FC4/production/_107844289_055122086-1.jpg 144w, https://ichef.bbci.co.uk/news/183/cpsprodpb/17FC4/production/_107844289_055122086-1.jpg 183w, https://ichef.bbci.co.uk/news/240/cpsprodpb/17FC4/production/_107844289_055122086-1.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsprodpb/17FC4/production/_107844289_055122086-1.jpg 320w, https://ichef.bbci.co.uk/news/660/cpsprodpb/17FC4/production/_107844289_055122086-1.jpg 660w"
  width="976"
/>
`;
